# ica-rs

./: Cargo.toml  README.md
console/: Cargo.toml  README.md
console/.openapi-generator/: FILES
console/docs/: AccessTokenRequest.md  HealthCheckStatuses.md  ProductUsage.md  Region.md  RegionsApi.md  (+5 more)
ens/: Cargo.toml  README.md
examples/get_presigned_url/: Cargo.toml
examples/get_presigned_url/src/: main.rs
examples/list_gds_volumes/: Cargo.toml
examples/list_gds_volumes/src/: main.rs
gds/: Cargo.toml
gds/docs/: AwsS3TemporaryUploadCredentials.md  BulkFailedItem.md  CreateFileRequest.md  CreateSessionRequest.md  FileArchiveStorageTier.md  FileListResponse.md  FolderCopyRequest.md  FolderListResponse.md  FolderUnarchiveRequest.md  GracePeriodEndAction.md  PartEtag.md  VolumeConfigurationResponse.md  VolumesApi.md
gds/src/: lib.rs  util.rs
gds/src/apis/: configuration.rs  files_api.rs  mod.rs  volumes_api.rs
gds/src/models/: archive_statuses.rs  aws_s3_presigned_url_for_upload.rs  aws_s3_temporary_upload_credentials.rs  bulk_failed_item.rs  bulk_file_update_response.rs  bulk_folder_update_item.rs  bulk_folder_update_request.rs  bulk_update_failed_item.rs  complete_session_request.rs  create_folder_request.rs  create_session_request.rs  create_session_response.rs  create_volume_request.rs  create_volume_response.rs  file_archive_request.rs  file_archive_storage_tier.rs  file_life_cycle_settings.rs  file_response.rs  file_status.rs  file_unarchive_request.rs  file_upload_complete_request.rs  file_writeable_response.rs  folder_archive_request.rs  folder_copy_operation_parameters.rs  folder_copy_request.rs  folder_delete_operation_parameters.rs  folder_list_response.rs  folder_update_request.rs  folder_writeable_response.rs  grace_period_end_action.rs  job_operation_parameters.rs  job_operation_type.rs  job_progress_status.rs  job_response.rs  job_status.rs  mod.rs  object_store_access.rs  object_store_settings.rs  part_info.rs  session_response.rs  (+10 more)
ica_v2/: Cargo.toml  README.md
openapi/: fetch_gds_api.sh  gds.json
src/: main.rs
tes/: Cargo.toml
wes/: Cargo.toml
(+915 files in other folders)
