[package]
name = "ica-gds"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
dirs = "4.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
url = "2.2"

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart"]
