[package]
name = "ica-gds"
version = "0.3.2"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
dirs = "4.0"
glob = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_yaml = "0.8"
url = "2.2"

[dependencies.reqwest]
version = "0.11"
features = ["json", "multipart"]
