[package]
name = "ica-gds-list-volumes"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm@nopcode.org>"]
edition = "2018"

[dependencies]
dirs = { version = "4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
ica-gds = { path = "../../gds" }